# srv.birth

./: .gitmodules  CMakeLists.txt
client/: CMakeLists.txt
client/src/: main.c
common/: bams.c  bams.h  types.h
lib/: CMakeLists.txt
lib/enet/: CMakeLists.txt
media/tiles/: lattia.mtl  lattia_kulma.mtl  seina.mtl  seina_kulma.mtl
server/: CMakeLists.txt
server/src/: main.c
