CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(srv.birth)

# GLHCK options
SET(GLHCK_BUILD_EXAMPLES OFF CACHE BOOL "Skip GLHCK examples")
SET(GLHCK_IMPORT_ASSIMP ON CACHE BOOL "Enable assimp importer")
SET(GLHCK_IMPORT_OPENCTM OFF CACHE BOOL "We don't need openctm")
SET(GLHCK_IMPORT_MMD OFF CACHE BOOL "We don't need mmd")

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(server)
ADD_SUBDIRECTORY(client)
FILE(COPY media DESTINATION .)
