CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(enet)

# The "configure" step.
INCLUDE(CheckFunctionExists)
INCLUDE(CheckStructHasMember)
INCLUDE(CheckTypeSize)
CHECK_FUNCTION_EXISTS("fcntl" HAS_FCNTL)
CHECK_FUNCTION_EXISTS("poll" HAS_POLL)
CHECK_FUNCTION_EXISTS("gethostbyname_r" HAS_GETHOSTBYNAME_R)
CHECK_FUNCTION_EXISTS("gethostbyaddr_r" HAS_GETHOSTBYADDR_R)
CHECK_FUNCTION_EXISTS("inet_pton" HAS_INET_PTON)
CHECK_FUNCTION_EXISTS("inet_ntop" HAS_INET_NTOP)
CHECK_STRUCT_HAS_MEMBER("struct msghdr" "msg_flags" "sys/types.h;sys/socket.h" HAS_MSGHDR_FLAGS)
SET(CMAKE_EXTRA_INCLUDE_FILES "sys/types.h" "sys/socket.h")
CHECK_TYPE_SIZE("socklen_t" HAS_SOCKLEN_T BUILTIN_TYPES_ONLY)
UNSET(CMAKE_EXTRA_INCLUDE_FILES)

IF (HAS_FCNTL)
    ADD_DEFINITIONS(-DHAS_FCNTL=1)
ENDIF ()
IF (HAS_POLL)
    ADD_DEFINITIONS(-DHAS_POLL=1)
ENDIF ()
IF (HAS_GETHOSTBYNAME_R)
    ADD_DEFINITIONS(-DHAS_GETHOSTBYNAME_R=1)
ENDIF ()
IF (HAS_GETHOSTBYADDR_R)
    ADD_DEFINITIONS(-DHAS_GETHOSTBYADDR_R=1)
ENDIF ()
IF (HAS_INET_PTON)
    add_definitions(-DHAS_INET_PTON=1)
ENDIf ()
IF (HAS_INET_NTOP)
    ADD_DEFINITIONS(-DHAS_INET_NTOP=1)
ENDIF ()
IF (HAS_MSGHDR_FLAGS)
    ADD_DEFINITIONS(-DHAS_MSGHDR_FLAGS=1)
ENDIF ()
IF (HAS_SOCKLEN_T)
    ADD_DEFINITIONS(-DHAS_SOCKLEN_T=1)
ENDIF ()

INCLUDE_DIRECTORIES(src/include)
ADD_LIBRARY(enet STATIC
   src/callbacks.c
   src/compress.c
   src/host.c
   src/list.c
   src/packet.c
   src/peer.c
   src/protocol.c
   src/unix.c
   src/win32.c
   )
